# pyasic_api

./: main.py  pyproject.toml
pyasic_api/: __init__.py  app.py
pyasic_api/get/: __init__.py
pyasic_api/post/: __init__.py
